src/assets/styles/index.css
@import url(~sanitize.css/sanitize.css);

@font-face {
    font-family: "Open Sans";
    src: url("../fonts/OpenSans-Regular.ttf") format("truetype");
}

@font-face {
    font-family: "Raleway";
    src: url("../fonts/Raleway-Regular.ttf") format("truetype");
}

:root {
    --main-bg-colour: rgb(250, 250, 250);
    --main-fg-colour: rgb(10, 10, 10);
    --main-link-colour: rgb(85, 26, 139);
    --light-link-colour: rgb(159, 44, 198);
    --main-display-font: "Raleway";
    --main-general-font: "Open Sans"
}

html,
body {
  height: 100vh;
}

body {
    font-family: "Open Sans", sans-serif;
    font-size: 16px;
    background-color: var(--main-bg-colour);
    color: var(--main-fg-colour);
    min-height: 100vh;
}

h1, h2, h3, h4, h5, h6 {
    font-family: "Raleway";
}

main {
  max-width: 1280px;
  padding: 85px 0 0 0;
  box-sizing: border-box;  
}

main > *:not(dialog) { 
  padding: 0 1em;
}

.bg-logo {
    position: relative;
}

.bg-logo::before {
    content: "";
    position: fixed;
    background-position-y: center;
    background-position-x: right;
    width: 100%;
    height: 100%;
    max-height: calc(100vh - 85px);
    background-image: url("../images/logo-round.webp");
    background-size: 50%;
    opacity: 0.2;
    z-index: -1;
}

.download-links, .social-links {
    display: flex;
    flex-direction: column;
}

.site-header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 85px;
  z-index: 999;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: var(--main-bg-colour);
}

.site-title {
  margin: 1rem auto 1rem 1rem;
}

.site-nav {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    margin-left: auto;
}

.site-nav * {
    margin-right: 1rem;
}

.site-nav *:last-child {
    margin-right: 1rem;
}

.hero {
  height: calc(100vh - 85px);
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: left;
  color: #333;
}

.hero-highlights {
  display: flex;
  flex-direction: column;
}

.hero-highlights * {
  font-size: 1.5rem;
  text-align: left;
  width: 75%;
  margin: 1rem 0;
}

.home-content {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.home-content h2 {
  width: 100%;
  box-sizing: border-box;
  padding: 0.5em;
}

.home-content > article {
  flex: 1;
  box-sizing: border-box;
}

.giant-text {
  font-size: 4rem;
}

.giant-subtext { 
  font-size: 2rem;
}

.reverse-colour {
  background-color: var(--main-fg-colour);
  color: var(--main-bg-colour);
}

.reverse-colour a {
  color: var(--light-link-colour);
}

.tags {
    display: flex;
    flex-flow: row wrap;
    padding: 0.5em 0;
    margin: 0;
    list-style: none;
    line-height: 1.5em;
}

.tags li {
/*    color: var(--main-bg-colour);
    background-color: var(--main-fg-colour); */
    font-family: var(--main-display-font);
    font-size: 0.8em;
    border-radius: 10px;
    margin: 0.1em 0.1em;
    padding: 0 0.5em;
	border: solid 1px var(--main-fg-colour);
}

.tags li:first-child {
    margin-left: 0;
}

.tags li:last-child {
    margin-right: 0;
}

.publishDate, .subTitle {
    font-size: 0.8em;
    font-style: italic;
    font-weight: bold;  
	  line-height: 1.5em;
}

.content-list {
    list-style: none;
    padding: 0 2em;
}

.content-list > li {
	margin: 1em 0;
}

.content-list > li:first-child {
	margin-top: 0;
}

.content-list > li:last-child {
	margin-bottom: 0;
}

.dialogue {
	position: fixed;
	bottom: 0px;
}

.btn_square {
    font-family: var(--main-display-font);
    border-radius: 3px;
    margin: 0.1em 0.1em;
    min-width: 100px;
    padding: 0 0.5em;
    border: solid 1px var(--main-fg-colour);
    background-color: none;
}

#cookieDialogue form {
    display: flex;
    flex-flow: row wrap;
}

#cookieDialogue form > * {
    margin-right: 1em;
    line-height: 2em;
    width: 150px;
}

.menu-toggle, .menu-toggle + label {
    display: none;
}

.event-item-title {
  margin: 1em 0 0.25em 0;
}

.page-header {
  padding-bottom: 1em;
}

/* Hide the site-nav on mobile devices */
@media (max-width: 820px) {
    .site-header {
      display: block;
    }

    .site-title {
      text-align: center;
      margin: 0.25em;
    }

    .site-nav {
      display: none;
    }

    .menu-toggle + label {
      display: block;
      padding: 0.5em;
      text-align: center;
    }
  
    .menu-toggle {
      background: none;
      border: none;
      color: var(--main-fg-colour);
      cursor: pointer;
      font-size: 1.5rem;
      padding: 10px;
    }

    .menu-toggle:checked ~ .site-nav {
      display: block;
    }

    .menu-toggle:checked + label {
      background: var(--main-fg-colour);
      color: var(--main-bg-colour);
    }

    .site-nav {
      background-color: var(--main-bg-colour);
      display: none;
    }
    .menu-toggle:checked ~ .site-nav {
      display: block;
    }
    .site-nav a {
      display: block;
      padding: 10px;
    }

    .hero {
      color: #333;
    }

    .hero p {
      max-width: fit-content;
    }
    
    .hero-highlights {
      display: flex;
      flex-direction: column;
    }
    
    .hero-highlights * {
      font-size: 1.25rem;
      text-align: left;
      width: 75%;
      margin: 1rem 0;
    }
    
    .giant-text {
      font-size: 3rem;
    }

    .giant-subtext {
      font-size: 1.5rem;
    }

    .home-content {
      flex-direction: column;
    }

    .home-content article {
      max-width: fit-content;
    }

    .bg-logo::before {
      background-position-y: bottom;
      background-position-x: right;
    }
  }
  

